@@ -1,3 +1,4 @@
+	* SOCKS4 fix for trying to connect over IPv6
 	* fix saving resume data when removing all trackers
 	* fix bug in udp_socket when changing socks5 proxy quickly
 
